# data-copilot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  server.py
backend/src/chat/: orchestrator.py  router.py
backend/src/connectors/: database.py  filesystem.py  web.py
backend/src/parsers/: csv_parser.py  excel_parser.py  pdf_parser.py  text_parser.py
backend/src/tools/: analysis_tools.py  file_tools.py  registry.py  sql_tools.py  web_tools.py
backend/src/utils/: formatting.py  safety.py
backend/tests/: conftest.py  test_analysis_tools.py  test_chat_router.py  test_config.py  test_csv_parser.py  test_database_connector.py  test_excel_parser.py  test_file_tools.py  test_filesystem_connector.py  test_formatting.py  test_integration.py  test_orchestrator.py  test_pdf_parser.py  test_registry.py  test_safety.py  test_server.py  test_sql_tools.py  test_text_parser.py  test_web_connector.py  test_web_tools.py
backend/tests/fixtures/: sample.csv  sample.json  sample.md  sample.tsv
docs/: architecture.md  setup.md
docs/plans/: 2026-02-26-data-copilot-design.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useChat.ts  useDataSources.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
sample-data/: init.sql
sample-data/sample_csvs/: marketing_campaigns.csv  regional_targets.csv
sample-data/sample_docs/: company_policies.md  market_report.md
(+9 files in other folders)
