[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-copilot"
version = "0.1.0"
description = "AI assistant that talks to your databases, files, and the web"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pypdf>=5.1.0",
    "httpx>=0.28.0",
    "duckduckgo-search>=7.0.0",
    "mcp>=1.0.0",
    "sse-starlette>=2.1.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
